implementacion del header

--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    Google
+    <header>
+        <nav>
+            <ul class="nav-right-section">
+                <li>
+                    <a href="">Gmail</a>
+                </li>
+                <li>
+                    <a href="">Imágenes</a>
+                </li>
+                <li class="menu-icon">
+                    <a href=""></a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="https://lh3.googleusercontent.com/ogw/AKPQZvzcd3Kb0xHq63rJDyTMxvi4r79gZwoNza07l-9FKQ=s32-c-mo" alt="">
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
